--- a/dash-example-1/Dockerfile
+++ b/dash-example-1/Dockerfile
@@ -6,5 +6,5 @@ RUN pip3 install -r requirements.txt
 
 # CMD python3 app.py
 
-CMD [ "gunicorn", "--workers=5", "--threads=1", "-b 0.0.0.0:8050", "app:server"] 
+#CMD [ "gunicorn", "--workers=5", "--threads=1", "-b 0.0.0.0:8050", "app:server"] 
 
